--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <input type="text" placeholder="Enter your full name" required>
 
     <label>Contact Number</label>
-    <input type="number" placeholder="Enter your phone number" required>
+    <input type="number" inputmode="numeric" placeholder="Enter your phone number" required>
 
     <label>Address</label>
     <textarea placeholder="Your address" required></textarea>
